--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@
 buildscript {
     ext.kotlin_version = '1.1.51'
     ext.anko_version = '0.10.8'
+    ext.retrofit_version = '2.5.0'
+    ext.okhttp_version = '3.12.0'
+    ext.rxjava_version = '1.3.8'
+    ext.rxandroid_version = '1.2.1'
+    ext.dagger_version = '2.20'
 
     repositories {
         google()
