--- a/usercenter/build.gradle
+++ b/usercenter/build.gradle
@@ -5,6 +5,7 @@ if (isUserMoudle.toBoolean()) {
 }
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
